# princeton-nat--2026

./: .env.example  .gitignore  README.md
module-1-fundamentals/: 01_Introduction.ipynb  02_Build_Your_First_Agent.ipynb  03_Surge_of_Agents.ipynb  README.md  pyproject.toml
module-2-nemo-agent-toolkit/: 01_NeMo_Agent_Toolkit_First_Contact.ipynb  02_Build_A_Math_Pro_Agent.ipynb  03_Evaluation_Observability_And_Optimization.ipynb  README.md  pyproject.toml
module-2-nemo-agent-toolkit/deep-dive/: 01_Evaluation.ipynb  02_Profiling.ipynb  03_Optimizing.ipynb  Dockerfile  README.md  pyproject.toml
module-2-nemo-agent-toolkit/deep-dive/configs/: config.yml  config_optimizer.yml  config_profiler.yml
module-2-nemo-agent-toolkit/deep-dive/src/nat_email_phishing_analyzer/: evaluator_register.py  prompt.py  register.py
module-2-nemo-agent-toolkit/nat_workflows/simple_llm_call/: pyproject.toml
module-2-nemo-agent-toolkit/nat_workflows/simple_llm_call/src/simple_llm_call/: register.py  simple_llm_call_function.py
module-2-nemo-agent-toolkit/nat_workflows/simple_llm_call/src/simple_llm_call/configs/: config.yml
module-3-advanced-workflows/: 01_RAG_It_Is_Ragtime.ipynb  02_Surge_of_Agents_with_NeMo_Agent_Toolkit.ipynb  README.md  pyproject.toml
module-3-advanced-workflows/rag_data/: anne_of_green_gables_project_gutenberg.txt  the_war_of_the_worlds_project_gutenberg.txt  twenty_thousand_leagues_under_the_sea_project_gutenberg.txt
