[project]
name = "nat-fundamentals"
version = "0.1.0"
description = "Module 1: Agent Fundamentals"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2,<2",
    "langgraph>=1.0,<2",
    "langchain-community>=0.4,<1",
    "langchain-text-splitters>=1.1,<2",
    "langchain-openai>=1.1,<2",
    "langchain-tavily>=0.2,<1",
    "langchain-nvidia-ai-endpoints>=1.1,<2",
    "fastembed>=0.6,<1",
    "faiss-cpu>=1.9,<2",
    "wikipedia>=1.4",
    "ipykernel>=7.0",
    "jupyterlab>=4.0",
    "gradio>=5.0,<6",
    "python-dotenv>=1.0",
    "pydantic>=2.12,<3",
    "crewai>=0.108,<1",
    "litellm>=1.74,<2",
]
