[project]
name = "nat-training-nemo-agent-toolkit"
version = "0.1.0"
description = "Module 2: NeMo Agent Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansi2html>=1.9.2",
    "colorama>=0.4.6",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.8",
    "nvidia-nat[langchain,phoenix]>=1.4.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "simple-llm-call",
]

[tool.uv.workspace]
members = [
    "nat_workflows/simple_llm_call",
]

[tool.uv.sources]
simple-llm-call = { workspace = true }
