[project]
name = "nat-training-nemo-agent-toolkit"
version = "0.1.0"
description = "Module 2: NeMo Agent Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansi2html>=1.9,<2",
    "colorama>=0.4.6,<1",
    "ipykernel>=7.0",
    "ipywidgets>=8.1,<9",
    "jupyterlab>=4.0",
    "nvidia-nat[langchain,phoenix]>=1.4,<2",
    "pandas>=2.3,<3",
    "python-dotenv>=1.0",
    "seaborn>=0.13,<1",
    "simple-llm-call",
    "arize-phoenix>=13.8,<14",
]

[tool.uv.workspace]
members = [
    "nat_workflows/simple_llm_call",
]

[tool.uv.sources]
simple-llm-call = { workspace = true }
