[project]
name = "nat-training-advanced-workflows"
version = "0.1.0"
description = "Module 3: Advanced NAT Workflows (RAG & Multi-Framework)"
requires-python = ">=3.12"
dependencies = [
    "nvidia-nat[crewai,langchain,llama-index,phoenix]>=1.4,<2",
    "langgraph>=1.0,<2",
    "langchain-nvidia-ai-endpoints>=1.1,<2",
    "llama-index-postprocessor-nvidia-rerank>=0.4,<1",
    "llama-index-vector-stores-faiss>=0.4,<1",
    "faiss-cpu>=1.9,<2",
    "ipykernel>=7.0",
    "jupyterlab>=4.0",
    "python-dotenv>=1.0",
    "colorama>=0.4.6,<1",
    "arize-phoenix>=13.8,<14",
]
